--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "typescript": "^4.9.5"
   },
   "dependencies": {
-    "big-js": "^3.1.3"
+    "big-js": "^3.1.3",
+    "run-all": "^1.0.1"
   }
 }
