--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "gravity",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "run-p start-compile start-run",
@@ -14,6 +15,7 @@
   },
   "dependencies": {
     "big-js": "^3.1.3",
+    "requirejs": "^2.3.6",
     "run-all": "^1.0.1"
   }
 }
