--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,13 @@
 {
   "compilerOptions": {
-    "module": "none",
+    "module": "ES6",
     "noImplicitAny": true,
-    "outFile": "./build/build.js",
+    "outDir": "./build/",
     "preserveConstEnums": true,
     "removeComments": true,
     "rootDir": "./sketch/",
     "sourceMap": true,
-    "target": "es5",
+    "target": "es6",
     "moduleResolution": "node"
   }
 }
